crates/lowering/tests/snapshots/lowering__base_tuple.snap
---
source: crates/lowering/tests/lowering.rs
expression: lowered

---
struct $tuple_bool_address_:
    pub item0: bool
    pub item1: address

struct $tuple_bool_bool_:
    pub item0: bool
    pub item1: bool

struct $tuple_address_address_:
    pub item0: address
    pub item1: address

struct $tuple_u256_bool_:
    pub item0: u256
    pub item1: bool

struct $tuple_u256_bool_u8_address_:
    pub item0: u256
    pub item1: bool
    pub item2: u8
    pub item3: address

struct $tuple_address_address_u16_i32_bool_:
    pub item0: address
    pub item1: address
    pub item2: u16
    pub item3: i32
    pub item4: bool

use std::context::Context

contract Foo:
    my_tuple_field: $tuple_bool_address_

    event MyEvent:
        my_tuple: $tuple_bool_bool_
        my_other_tuple: $tuple_address_address_

    pub fn bar(my_num: u256, my_bool: bool) -> $tuple_u256_bool_:
        return $tuple_u256_bool_(item0: my_num, item1: my_bool)

    pub fn baz() -> $tuple_u256_bool_u8_address_:
        return $tuple_u256_bool_u8_address_(item0: 999999, item1: false, item2: u8(42), item3: address(26))

    pub fn bing() -> ():
        let foo: $tuple_address_address_u16_i32_bool_ = $tuple_address_address_u16_i32_bool_(item0: address(0), item1: address(0), item2: u16(0), item3: i32(0), item4: false)
        return ()

    pub fn bop(my_tuple1: $tuple_u256_bool_, my_tuple2: $tuple_u256_bool_u8_address_, my_tuple3: $tuple_address_address_u16_i32_bool_) -> ():
        pass
        return ()

    pub fn food(ctx: Context) -> ():
        emit MyEvent(ctx, my_tuple: $tuple_bool_bool_(item0: false, item1: true), my_other_tuple: $tuple_address_address_(item0: address(0), item1: address(1)))
        return ()
