crates/lowering/tests/snapshots/lowering__custom_empty_type.snap
---
source: crates/lowering/tests/lowering.rs
expression: lowered_code

---
struct MyEmptyType:
    pass

contract Foo:
    pub fn bar() -> MyEmptyType:
        return MyEmptyType()
