crates/lowering/tests/snapshots/lowering__init.snap
---
source: crates/lowering/tests/lowering.rs
expression: lowered_code

---
contract Foo:
    pub fn __init__() -> ():
        pass
        return ()
