crates/lowering/tests/snapshots/lowering__module_fn.snap
---
source: crates/lowering/tests/lowering.rs
expression: lowered

---
struct $tuple_u256_u8_:
    pub item0: u256
    pub item1: u8

struct $tuple_address_tuple_u256_u8__:
    pub item0: address
    pub item1: $tuple_u256_u8_

fn list_expr_array_u8_3(val0: u8, val1: u8, val2: u8) -> Array<u8, 3>:
    let generated_array: Array<u8, 3>
    generated_array[0] = val0
    generated_array[1] = val1
    generated_array[2] = val2
    return generated_array

fn return_tuple() -> $tuple_address_tuple_u256_u8__:
    return $tuple_address_tuple_u256_u8__(item0: address(0), item1: $tuple_u256_u8_(item0: 10, item1: 20))

fn return_array() -> Array<u8, 3>:
    return list_expr_array_u8_3(1, 2, 3)

contract Foo:
    pub fn bar(self) -> u256:
        let tuple: $tuple_address_tuple_u256_u8__ = return_tuple()
        return tuple.item1.item0

    pub fn sum_things() -> u8:
        let x: Array<u8, 3> = return_array()
        return x[0] + x[1] + x[2]
