crates/lowering/tests/snapshots/lowering__nested_tuple.snap
---
source: crates/lowering/tests/lowering.rs
expression: lowered

---
struct $tuple_u8_bool_:
    pub item0: u8
    pub item1: bool

struct $tuple_u8_u8_:
    pub item0: u8
    pub item1: u8

struct $tuple_address_tuple_u8_u8__:
    pub item0: address
    pub item1: $tuple_u8_u8_

struct $tuple_u256_tuple_u8_bool__tuple_address_tuple_u8_u8___:
    pub item0: u256
    pub item1: $tuple_u8_bool_
    pub item2: $tuple_address_tuple_u8_u8__

contract Foo:
    tup: $tuple_u256_tuple_u8_bool__tuple_address_tuple_u8_u8___

    pub fn bar(self, x: u256) -> u8:
        self.tup = $tuple_u256_tuple_u8_bool__tuple_address_tuple_u8_u8___(item0: 1, item1: $tuple_u8_bool_(item0: 0, item1: true), item2: $tuple_address_tuple_u8_u8__(item0: address(0), item1: $tuple_u8_u8_(item0: 10, item1: 100)))
        return self.tup.item2.item1.item0
