crates/lowering/tests/snapshots/lowering__struct_fn.snap
---
source: crates/lowering/tests/lowering.rs
expression: lowered

---
struct Foo:
    pub x: u256

    pub fn set_x(self, _ new: u256) -> u256:
        let old: u256 = self.get_x()
        self.x = new
        return old

    pub fn get_x(self) -> u256:
        return self.x

fn main() -> ():
    let foo: Foo = Foo(x: 10)
    foo.set_x(100)
    assert foo.get_x() == 100
    return ()

