crates/lowering/tests/snapshots/lowering__type_alias_tuple.snap
---
source: crates/lowering/tests/lowering.rs
expression: lowered_code

---
struct tuple_u8_address_:
    item0: u8
    item1: address

type Tup = tuple_u8_address_

contract Foo:
    tup: Tup


