crates/lowering/tests/snapshots/lowering__unit_implicit.snap
---
source: crates/lowering/tests/lowering.rs
expression: lowered_code

---
contract Foo:
    fn bar() -> ():
        pass
        return ()
